Kubernetes/web-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-express-deployment
  labels:
    app: web-express
spec:
  replicas: 2
  selector:
    matchLabels:
      name: web-express
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: web-express
    spec:
      containers:
        - image: abdelazizomar/ejs-api-hub:1
          name: web-express-container
          ports:
            - containerPort: 3000
              name: express-port
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          emptyDir: {}
