Kubernetes/web-app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: web-service
spec:
  selector:
    name: web-express
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: express-port
